# polyflow

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 0d8cf70cf19a_initial_schema.py  b1680a0e261a_add_orders_table.py  ff72bf6eb51c_add_order_pnl.py
app/: __init__.py  config.py  logging.py  main.py
app/api/routes/: backtest.py  health.py  markets.py  recommendations.py  stream.py  traders.py  trading.py
app/backtesting/: engine.py  scenario.py
app/cache/: redis.py
app/clients/: fixtures.py  polymarket.py  websocket.py
app/db/: base.py  models.py  session.py
app/ingestion/: markets.py  traders.py  trades.py
app/schemas/: models.py
app/scoring/: ranking.py
app/services/: markets.py  recommendations.py  traders.py
app/trading/: client.py  executor.py  pnl.py  risk.py
app/web/static/: app.js  index.html  styles.css
app/worker/: pipeline.py  run.py  scheduler.py
tests/: conftest.py  test_api.py  test_backtesting.py  test_clients.py  test_ranking.py  test_trading.py
tests/fixtures/: raw_samples.json
