[project]
name = "polyflow"
version = "0.1.0"
description = "Automated trading intelligence pipeline for Polymarket prediction markets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PolyFlow" }]

dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "redis>=8.0.1",
    "httpx>=0.28.1",
    "websockets>=16.1.1",
    "apscheduler>=3.11.3",
    "tenacity>=9.1.4",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]
# Only needed to place LIVE orders. Analytics + paper trading work without it.
trading = [
    "py-clob-client>=0.34.6",
]

[project.scripts]
polyflow-worker = "app.worker.run:main"

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Alembic autogenerates verbose migration files; don't lint generated code.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.isort]
known-first-party = ["app"]
