[project]
name = "polyflow"
version = "0.1.0"
description = "Automated trading intelligence pipeline for Polymarket prediction markets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PolyFlow" }]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "redis>=5.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "apscheduler>=3.10",
    "tenacity>=8.3",
    "python-dotenv>=1.0",
    "certifi>=2024.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
# Only needed to place LIVE orders. Analytics + paper trading work without it.
trading = [
    "py-clob-client>=0.17",
]

[project.scripts]
polyflow-worker = "app.worker.run:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Alembic autogenerates verbose migration files; don't lint generated code.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.isort]
known-first-party = ["app"]
